[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/torreta.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Torreta.gd" type="Script" id=2]
[ext_resource path="res://Scenes/bala_enemigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://BGM-SFX/Super C SFX (13).wav" type="AudioStream" id=4]
[ext_resource path="res://BGM-SFX/Contra SFX (15).wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/explosiones.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource_name = "Abriendo"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]

resource_name = "explosion"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arma:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arma:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arma:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arma:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="Torreta2" type="Position2D"]

[node name="Base" type="Sprite" parent="." index="0"]

position = Vector2( 1509.08, 173 )
scale = Vector2( 1.15625, 1.5625 )
texture = ExtResource( 1 )
hframes = 4
_sections_unfolded = [ "Animation" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Base" index="0"]

position = Vector2( 44.108, 0.32 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Torreta" type="KinematicBody2D" parent="." index="1" groups=[
"enemigo",
]]

position = Vector2( 1511, 174 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
bala = ExtResource( 3 )
vidas = 5
puntos = 100

[node name="muerte" type="AudioStreamPlayer" parent="Torreta" index="0"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="golpe" type="AudioStreamPlayer" parent="Torreta" index="1"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torreta" index="2"]

position = Vector2( -2.5, -3 )
shape = SubResource( 1 )

[node name="Arma" type="Sprite" parent="Torreta" index="3"]

visible = false
position = Vector2( -1.46167, -1.25 )
scale = Vector2( 1.3774, 1.54688 )
texture = ExtResource( 1 )
hframes = 4
frame = 3
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Torreta" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Abriendo = SubResource( 2 )
anims/explosion = SubResource( 3 )
blend_times = [  ]

[node name="Spawn_Balas" type="Position2D" parent="Torreta" index="5"]

position = Vector2( 52.5, -1 )
_sections_unfolded = [ "Transform" ]

[node name="cooldown" type="Timer" parent="Torreta" index="6"]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[connection signal="screen_entered" from="Base/VisibilityNotifier2D" to="Torreta" method="_on_VisibilityNotifier2D_screen_entered"]

[connection signal="screen_exited" from="Base/VisibilityNotifier2D" to="Torreta" method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="animation_finished" from="Torreta/AnimationPlayer" to="Torreta" method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Torreta/cooldown" to="Torreta" method="_on_cooldown_timeout"]


